# Shader-evaluator

./: CMakeLists.txt  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  README.md  Shader.cpp  Shader.h  imgui.ini  main.cpp
shaders/: PBRfragment.glsl  PBRvertex.glsl  blinnPhongF.glsl  lambertF.glsl  lambertV.glsl  lightFrag.glsl  lightVert.glsl  orenNayarF.glsl  orenNayarV.glsl  phongF.glsl  phongV.glsl
